# detr

./: pyproject.toml
